[#71792934] fixed overflowing terms of service

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,6 +43,7 @@ nav {
   height: 70%;
   padding-top: 3%;
   text-align: center;
+  overflow: auto;
 }
 
 footer {
